<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="277dp"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="#03A9F4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="587dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/signInUser"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/signInAsUser" />

        <Button
            android:id="@+id/signInAdmin"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/signInAsAdmin" />

        <Button
            android:id="@+id/RegAdmin"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/registerAsAdmin" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>